--- a/bibekpoude.info.np/Project_7/index.html
+++ b/bibekpoude.info.np/Project_7/index.html
@@ -13,7 +13,6 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/api-check/7.5.5/api-check.min.js" integrity="sha512-6HttpuMHEUe8wk/08iGK7JY0lyS2xg8KMXQy5WPe9vCd1mVEl6jkLiBLQXV1PHSuM/GAPNzGkyNtzeB9anRFDg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
     <header>
         <nav class="container">
@@ -29,10 +28,7 @@
                 <a href="#">Finance</a>
                 <a href="#">Hamas-Israil War</a>
             </div>
-
             <i class="fa-solid fa-bars bars-for-nav"></i>
-
-
             <div class="nav-search">
                 <input type="text" placeholder="Search News" class="nav-search-box" id="nav-search">
 
@@ -41,10 +37,7 @@
             <i class="fa-solid fa-magnifying-glass" id="search-for-nav"></i>
         </nav>
     </header>
-
-
     <main>
-
         <div class="card-container container" id="card-container">
             <!--
                 <div class="card">
@@ -57,7 +50,7 @@
                     <p class="news-description" id="news-description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Perspiciatis officia aliquam debitis dolores, quibusdam sequi.</p>
                 </div>
             </div>
--->
+--> 
             <template id="template-news-card">
                 <div class="card">
                     <div class="card-header">
@@ -66,19 +59,16 @@
                     <div class="card-content">
                         <h3 id="news-title" class="news-title">This is title</h3>
                         <h6 id="news-source" class="news-source">End Gadget 26/08/2024</h6>
+                       
                         <p class="news-description" id="news-description">Lorem ipsum dolor sit, amet consectetur
                             adipisicing elit. Perspiciatis officia aliquam debitis dolores, quibusdam sequi.</p>
                     </div>
                 </div>
             </template>
-
         </div>
     </main>
-
-
     <footer></footer>
 
-    <script src="script.js"></script>
+    <script src="/Project_7/script.js"></script>
 </body>
-
 </html>
